tests/FSharp.Compiler.ComponentTests/Conformance/TypeForwarding/NegativeCases/Cycle_Dummy.fs
// Every testcase need a sourcefile, so this is a fake one.
// Add some code so that you don't get the 'empty module' warning.

if false then
    printfn "Hello, World!"

exit 0
